Stop smaller modals from filling entire screen on smaller displays

--- a/src/components/styles/Modal.module.css
+++ b/src/components/styles/Modal.module.css
@@ -37,7 +37,7 @@
 }
 
 @media screen and (max-height: 800px) {
-  .main {
+  .main.tall {
     top: 0;
     bottom: 0;
     overflow: auto;
